--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse bg-white" id="navbarNav">
+        <div class="collapse navbar-collapse opacity-100" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#homepage">Home <span class="sr-only">(current)</span></a>
