--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         
     
-      <nav class="navbar navbar-expand-lg  navbar-light bg-light mb-5 navbar-section opacity-100 shadow ">
+      <nav class="navbar navbar-expand-lg  navbar-light bg-light  navbar-section opacity-100 shadow ">
         <a class="navbar-brand " href="#homepage"><img class='image' src="https://img.freepik.com/free-vector/baby-birth-concept-illustration_114360-8159.jpg?w=740&t=st=1703515330~exp=1703515930~hmac=df9d0da2063d8086c25360f1c0689030a733d414c2b1904e1d0e1506724c221f"/></a>
         <a class="navbar-brand" href="#homepage"><h1 class="head">PregaBot🩺</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
