--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       
       <div class="row">
 
-        <div class="col-12 col-lg-6 ">
+        <div class="col-12 col-lg-6 pt-3">
           <h1 class=" head-1 text-center  ">Hello,This is your PregaBot !</h1>
           <p class="head-2">Meet your dedicated companion for a healthy pregnancy journey! Pregabot, our generative AI chatbot, is here to provide personalized guidance on diet, exercises, and safety measures. Tailored for the well-being of both body and mind, Pregabot ensures you navigate pregnancy with confidence and expert support. Experience the joy of a healthier pregnancy with your trusted Pregabot by your side.</p>
           <div id="carouselExampleControls" class="shadow carousel slide ml-auto mr-auto  pregnancycontainer m-4" data-ride="carousel">
