--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           
 
 <div>
-    <div id="homepage" class="container home-block justify-content-center p-0 ml-auto mr-auto mt-3">
+    <div id="homepage" class="container home-block justify-content-between p-2 ml-auto mr-auto ">
       
       <div class="row">
 
